// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectPriority component should render with Info Box 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group lbh-form-group"
    id="priorityCode-form-group"
  >
    <label
      class="govuk-label lbh-label"
      for="priorityCode"
    >
      Task priority 
      <span
        class="govuk-required"
      >
        *
      </span>
    </label>
    <select
      class="govuk-select lbh-select govuk-!-width-full"
      data-testid="priorityCode"
      disabled=""
      id="priorityCode"
      name="priorityCode"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        1 [I] IMMEDIATE
      </option>
      <option
        value="2"
      >
        2 [E] EMERGENCY
      </option>
      <option
        value="3"
      >
        4 [U] URGENT
      </option>
      <option
        value="4"
      >
        5 [N] NORMAL
      </option>
      <option
        value="9"
      >
        9 [P] PLANNED
      </option>
    </select>
  </div>
  <br />
  <div
    class="warning-info-box govuk-inset-text lbh-inset-text"
  >
    <div
      class="lbh-warning-text govuk-warning-text"
    >
      <span
        aria-hidden="true"
        class="govuk-warning-text__icon"
      >
        !
      </span>
      <div
        class="govuk-warning-text__text"
      >
        <span
          class="govuk-warning-text__assistive"
        >
          Warning
        </span>
        <p
          class="govuk-!-margin-top-0 lbh-body-s lbh-!-font-weight-bold"
        >
          Planned priority
        </p>
        <p
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          Planned work order don't go to DRS booking system
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectPriority component should render with Info Box when Planned priority is selected 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group lbh-form-group"
    id="priorityCode-form-group"
  >
    <label
      class="govuk-label lbh-label"
      for="priorityCode"
    >
      Task priority 
      <span
        class="govuk-required"
      >
        *
      </span>
    </label>
    <select
      class="govuk-select lbh-select govuk-!-width-full"
      data-testid="priorityCode"
      disabled=""
      id="priorityCode"
      name="priorityCode"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        1 [I] IMMEDIATE
      </option>
      <option
        value="2"
      >
        2 [E] EMERGENCY
      </option>
      <option
        value="3"
      >
        4 [U] URGENT
      </option>
      <option
        value="4"
      >
        5 [N] NORMAL
      </option>
      <option
        value="9"
      >
        9 [P] PLANNED
      </option>
    </select>
  </div>
  <br />
  <div
    class="warning-info-box govuk-inset-text lbh-inset-text"
  >
    <div
      class="lbh-warning-text govuk-warning-text"
    >
      <span
        aria-hidden="true"
        class="govuk-warning-text__icon"
      >
        !
      </span>
      <div
        class="govuk-warning-text__text"
      >
        <span
          class="govuk-warning-text__assistive"
        >
          Warning
        </span>
        <p
          class="govuk-!-margin-top-0 lbh-body-s lbh-!-font-weight-bold"
        >
          Planned priority
        </p>
        <p
          class="lbh-body-xs govuk-!-margin-top-1"
        >
          Planned work order don't go to DRS booking system
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectPriority component should render without Info Box 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group lbh-form-group"
    id="priorityCode-form-group"
  >
    <label
      class="govuk-label lbh-label"
      for="priorityCode"
    >
      Task priority 
      <span
        class="govuk-required"
      >
        *
      </span>
    </label>
    <select
      class="govuk-select lbh-select govuk-!-width-full"
      data-testid="priorityCode"
      disabled=""
      id="priorityCode"
      name="priorityCode"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        1 [I] IMMEDIATE
      </option>
      <option
        value="2"
      >
        2 [E] EMERGENCY
      </option>
      <option
        value="3"
      >
        4 [U] URGENT
      </option>
      <option
        value="4"
      >
        5 [N] NORMAL
      </option>
      <option
        value="9"
      >
        9 [P] PLANNED
      </option>
    </select>
  </div>
</DocumentFragment>
`;
